Fix table row width issue on mobile layout
Specifically:
- table rows on Home page too narrow for mobile layout

--- a/src/app/landing/landing-page/landing-page.component.scss
+++ b/src/app/landing/landing-page/landing-page.component.scss
@@ -31,6 +31,18 @@ h4 {
     margin-top: 64px;
 }
 
+.tracks,
+.artists {
+    width: 100%;
+}
+
+@include for-tablet-portrait-up {
+    .tracks,
+    .artists {
+        width: 80%;
+    }
+}
+
 @include for-tablet-landscape-up {
 
     #landing-page {
